# splicer

./: .rustfmt.toml  Cargo.toml  flake.nix
src/: lib.rs  main.rs
src/cli/: attach.rs  detach.rs  kill.rs  list.rs  mod.rs  new.rs  server.rs
src/common/: error.rs  idgen.rs  mod.rs  result.rs
src/ipc/: client.rs  mod.rs  proto.rs  server.rs  wire.rs
src/pty/: mod.rs  portable.rs
src/server/: mod.rs  pane.rs  peer.rs  session.rs  state.rs  window.rs
tests/: pty_basic.rs
