[package]
name = "splicer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
bytes = "1.10.1"
crossterm = "0.29.0"
mlua = { version = "0.11.4", features = ["lua54", "vendored", "serialize", "serde"] }
portable-pty = "0.9.0"
radix_fmt = "1.0.0"
rmp-serde = "1.3.0"
rust-args-parser = "0.4.1"
rustix = { version = "1.1.2", features = ["process"] }
rustlog = "0.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal", "process", "sync", "time"] }
